# algos

./: CMakeLists.txt  README.md  heap_sort.hpp  interval.hpp  main.cpp  quick_sort.hpp
tests/: CMakeLists.txt  algorithms-tests.cpp
